2002-11-01  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/ibuf8.cc : Working round MSVC compiler bug.
	* msvcstuff/*.* : Version updates
	* AUTHORS, ChangeLog, data/credits.txt : Changing my email address

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.spec.in, desktop/Makefile.am, mapedit/Makefile.am:
	updated for RH80, other minor packaging changes

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Face_stats.cc: fixed division by zero
	* shapes/Makefile.am: new automakes don't support OMIT_DEPENDENCIES

2002-10-31  Jeff Freedman  <jeff@amy.nerble.net>

	* configure.in:  Version 1.00.

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: fixed hang in french BG

2002-10-10  Max Horn  <max@quendi.de>

	* synced with my recent (and some not so recent) changes to HEAD CVS:
	all of these are there to get exult to compile on MacOS X again

2002-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc,pathfinder/*:  Integrated changes from 1.1x to fix
	start of Mtns. of Freedom bug.

2002-09-11  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated and/or spellchecked
	* docs/*.html: updated and/or spellchecked
	* FAQ, ReadMe : updated and spellchecked

2002-08-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/*: backported unicode conversion for savegame gumps
	* tools/Makefile.am: don't build ucdump anymore

2002-07-28  Ryan Nunn  <colourles@users.sourceforge.net>
	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
	  coord was being ignored in comparisons of nodes). This fixes the
	  Monitor Training problem. Probably fixes countless other pathfinding
	  problems too.

2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* exult.cc: little correction of the --help screen (--bg, --si instead of 
	  -bg -si)
	* Readme, FAQ: updated.
	* docs/xml/docs.xml, faq.xml: updated